Upgrading outdated dependencies