@@ -108,11 +108,12 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <derby.version>10.13.1.1</derby.version>
-        <org.slf4j.version>2.0.13</org.slf4j.version>
-        <log4j2.version>2.23.1</log4j2.version>
+        <org.slf4j.version>2.0.16</org.slf4j.version>
+        <log4j2.slf4j.impl>2.18.0</log4j2.slf4j.impl>
+        <log4j2.version>2.24.0</log4j2.version>
         <surefire.version>3.0.0-M4</surefire.version>
         <junit.version>4.12</junit.version>
-        <curator.version>2.8.0</curator.version>
+        <curator.version>5.7.0</curator.version>
         <groovy.version>2.4.7</groovy.version>
         <xpp3.version>1.1.6</xpp3.version>
         <xpp5.version>1.2.8</xpp5.version>
@@ -131,7 +132,7 @@
         <mysql.connector.version>5.1.34</mysql.connector.version>
         <skipTests>false</skipTests>
         <google.gson.version>2.10.1</google.gson.version>
-        <zk.version>3.4.0</zk.version>
+        <zk.version>3.9.2</zk.version>
         <amqp.client.version>3.5.1</amqp.client.version>
         <snakeyaml.version>1.15</snakeyaml.version>
         <maven.javadoc.failOnError>false</maven.javadoc.failOnError>
@@ -140,7 +141,7 @@
         <kafka-clients.version>1.0.0</kafka-clients.version>
         <json.version>20160212</json.version>
         <commons.io.version>2.11.0</commons.io.version>
-        <google.guava.version>20.0</google.guava.version>
+        <google.guava.version>33.2.1-jre</google.guava.version>
         <jacoco.version>0.8.1</jacoco.version>
         <openjpa.version>3.1.0</openjpa.version>
         <dozer.version>5.4.0</dozer.version>
@@ -170,7 +171,7 @@
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-slf4j-impl</artifactId>
+            <artifactId>log4j-slf4j18-impl</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
@@ -202,8 +203,8 @@
             </dependency>
             <dependency>
                 <groupId>org.apache.logging.log4j</groupId>
-                <artifactId>log4j-slf4j-impl</artifactId>
-                <version>${log4j2.version}</version>
+                <artifactId>log4j-slf4j18-impl</artifactId>
+                <version>${log4j2.slf4j.impl}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.logging.log4j</groupId>
@@ -369,7 +370,7 @@
                     <!-- Integration tests are run using the fail-safe plugin in the module
                         pom -->
                     <useSystemClassLoader>false</useSystemClassLoader>
-                    <argLine>-Xmx1024m -XX:MaxPermSize=256m
+                    <argLine>-Xmx1024m -XX:MaxPermSize=256m --add-opens java.base/java.lang=ALL-UNNAMED
                         -javaagent:${settings.localRepository}/org/jmockit/jmockit/${jmockit.version}/jmockit-${jmockit.version}.jar
                     </argLine>
 
